[tool.poetry]
name = "database-backup-utility"
version = "0.1.0"
description = "Database backup CLI utility for various DBs based on Python"
authors = ["Mohammed Ahad <kulahad007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.9.1"
pymssql = "^2.3.1"
typer = "^0.12.5"
rich = "^13.8.1"
mysql-connector-python = "^9.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
